Updated SIFT description.

--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -640,3 +640,31 @@ url = {https://www.sciencedirect.com/science/article/pii/B9780080515816500702},
 author = {Martin A. Fischler and Robert C. Bolles},
 abstract = {A new paradigm, Random Sample Consensus (RANSAC), for fitting a model to experimental data is introduced, RANSAC is capable of interpreting/ smoothing data containing a significant percentage of gross errors, and is thus ideally suited for applications in automated image analysis where interpretation is based on the data provided by error-prone feature detectors. A major portion of this paper describes the application of RANSAC to the Location Determination Problem (LDP): Given an image depicting a set of landmarks with known locations, determine that point in space from which the image was obtained. In response to a RANSAC requirement, new results are derived on the minimum number of landmarks needed to obtain a solution, and algorithms are presented for computing these minimum-landmark solutions in closed form. These results provide the basis for an automatic system that can solve the LDP under difficult viewing and analysis conditions. Implementation details and computational examples are also presented.}
 }
+
+@article{asift,
+    title   = {{ASIFT: An Algorithm for Fully Affine Invariant Comparison}},
+    author  = {Yu, Guoshen and Morel, Jean-Michel},
+    journal = {{Image Processing On Line}},
+    volume  = {1},
+    pages   = {11--38},
+    year    = {2011},
+    note    = {\url{https://doi.org/10.5201/ipol.2011.my-asift}}
+}
+
+@InProceedings{surf,
+author="Bay, Herbert
+and Tuytelaars, Tinne
+and Van Gool, Luc",
+editor="Leonardis, Ale{\v{s}}
+and Bischof, Horst
+and Pinz, Axel",
+title="SURF: Speeded Up Robust Features",
+booktitle="Computer Vision -- ECCV 2006",
+year="2006",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="404--417",
+abstract="In this paper, we present a novel scale- and rotation-invariant interest point detector and descriptor, coined SURF (Speeded Up Robust Features). It approximates or even outperforms previously proposed schemes with respect to repeatability, distinctiveness, and robustness, yet can be computed and compared much faster.",
+isbn="978-3-540-33833-8"
+}
+
