--- a/main.tex
+++ b/main.tex
@@ -86,6 +86,8 @@
 \acrodef{convlstmae}[ConvLSTM-AE]{Convolutional LSTM Autoencoder}
 \acrodef{sift}[SIFT]{Scale-Invariant Feature Transform}
 \acrodef{ransac}[RANSAC]{Random Sample Consensus}
+\acrodef{asift}[ASIFT]{Affine Scale-Invariant Feature Transform}
+\acrodef{surf}[SURF]{Speeded-Up Robust Features}
 
 
 \begin{document}
