Added appendix with training algorithms on Dreyeve.

--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 
 
 \usepackage{lipsum}
+\usepackage[toc,page]{appendix}
 \usepackage{afterpage}
 \usepackage{bm}
 \usepackage{graphicx}
@@ -55,6 +56,7 @@
 \usepackage{amsmath}
 \usepackage{acronym}
 \usepackage{xcolor}
+\usepackage[ruled]{algorithm2e}
 
 % Define a new command let Stefano insert his comments
 \newcommand{\stext}[1]{\color{teal}\rule{\linewidth}{1mm}
@@ -116,6 +118,8 @@
 % \include{chapters/6_discussion/discussion.tex}
 %
 \include{chapters/7_conclusion/conclusion.tex}
+%
+\include{chapters/8_appendix/appendix.tex}
 %
 \printbibliography
 %
