--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 \usepackage{rotating}
 \usepackage{multirow}
 \usepackage{siunitx}
+\usepackage{hyperref}
 \sisetup{scientific-notation=true, output-exponent-marker=\ensuremath{\mathrm{E}}}
 
 \newcommand\blankpage{%
