Added description of Matthews correlation coefficient to the appendix.

--- a/main.tex
+++ b/main.tex
@@ -67,32 +67,6 @@
 \color{black}}
 
 % list of acronyms
-% \acrodef{adas}[ADAS]{Advanced Driver Assistance Systems}
-% \acrodef{who}[WHO]{World Health Organization}
-% \acrodef{cagr}[CAGR]{Compound Annual Growth Rate}
-% \acrodef{oems}[OEMs]{Original Equipment Manufacturers}
-% \acrodef{acc}[ACC]{Adaptive Cruise Control}
-% \acrodef{lka}[LKA]{Lane Keeping Assistance}
-% \acrodef{ldw}[LDW]{Lane Departure Warning}
-% \acrodef{aeb}[AEB]{Automatic Emergency Braking}
-% \acrodef{bsd}[BSD]{Blind Spot Detection}
-% \acrodef{tsr}[TSR]{Traffic Sign Recognition}
-% \acrodef{dms}[DMS]{Driver Monitoring System}
-% \acrodef{mpl}[MPL]{Meta Pseudo Labels}
-% \acrodef{vit}[ViT]{Vision Transformer}
-% \acrodef{cnn}[CNN]{Convolutional Neural Network}
-% \acrodef{rnn}[RNN]{Recurrent Neural Network}
-% \acrodef{lstm}[LSTM]{Long Short-Term Memory}
-% \acrodef{gru}[GRU]{Gated Recurrent Unit}
-% \acrodef{mlp}[MLP]{Multi-Layer Perceptron}
-% \acrodef{vad}[VAD]{Video Anomaly Detection}
-% \acrodef{convae}[ConvAE]{Convolutional Autoencoder}
-% \acrodef{convlstmae}[ConvLSTM-AE]{Convolutional LSTM Autoencoder}
-% \acrodef{sift}[SIFT]{Scale-Invariant Feature Transform}
-% \acrodef{ransac}[RANSAC]{Random Sample Consensus}
-% \acrodef{asift}[ASIFT]{Affine Scale-Invariant Feature Transform}
-% \acrodef{surf}[SURF]{Speeded-Up Robust Features}
-
 \DeclareAcronym{adas}{
     short = ADAS,
     long = Advanced Driver Assistance Systems
@@ -188,6 +162,18 @@
 \DeclareAcronym{surf}{
     short = SURF,
     long = Speeded-Up Robust Features
+}
+\DeclareAcronym{mcc}{
+    short = MCC,
+    long = Matthews Correlation Coefficient
+}
+\DeclareAcronym{auc}{
+    short = AUC,
+    long = Area Under the Curve
+}
+\DeclareAcronym{roc}{
+    short = ROC,
+    long = Receiver Operating Characteristic
 }
 
 
