Updated probabilistic theory of auc.

--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -668,3 +668,12 @@ abstract="In this paper, we present a novel scale- and rotation-invariant intere
 isbn="978-3-540-33833-8"
 }
 
+@article{roc_auc_probabilistic,
+  title={Measuring classifier performance: a coherent alternative to the area under the ROC curve},
+  author={David J. Hand},
+  journal={Machine Learning},
+  year={2009},
+  volume={77},
+  pages={103-123},
+  url={https://api.semanticscholar.org/CorpusID:207211591}
+}
