--- a/main.tex
+++ b/main.tex
@@ -175,6 +175,22 @@
     short = ROC,
     long = Receiver Operating Characteristic
 }
+\DeclareAcronym{fpr}{
+    short = FPR,
+    long = False Positive Rate
+}
+\DeclareAcronym{tpr}{
+    short = TPR,
+    long = True Positive Rate
+}
+\DeclareAcronym{pdf}{
+    short = p.d.f.,
+    long = Probability Density Function
+}
+\DeclareAcronym{cdf}{
+    short = CDF,
+    long = Cumulative Density Function
+}
 
 
 \begin{document}
