Updated the related work section.

--- a/main.tex
+++ b/main.tex
@@ -139,6 +139,10 @@
     short = VAD,
     long = Video Anomaly Detection
 }
+\DeclareAcronym{var}{
+    short = VAR,
+    long = Video Action Recognition
+}
 \DeclareAcronym{convae}{
     short = ConvAE,
     long = Convolutional Autoencoder
@@ -190,6 +194,10 @@
 \DeclareAcronym{cdf}{
     short = CDF,
     long = Cumulative Density Function
+}
+\DeclareAcronym{gan}{
+    short = GAN,
+    long = Generative Adversarial Network
 }
 
 
