Updated the related_work section.

--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -677,3 +677,94 @@ isbn="978-3-540-33833-8"
   pages={103-123},
   url={https://api.semanticscholar.org/CorpusID:207211591}
 }
+
+@INPROCEEDINGS{tran_3dconvnet,
+
+  author={Tran, Du and Bourdev, Lubomir and Fergus, Rob and Torresani, Lorenzo and Paluri, Manohar},
+
+  booktitle={2015 IEEE International Conference on Computer Vision (ICCV)}, 
+
+  title={Learning Spatiotemporal Features with 3D Convolutional Networks}, 
+
+  year={2015},
+
+  volume={},
+
+  number={},
+
+  pages={4489-4497},
+
+  keywords={Three-dimensional displays;Convolution;Kernel;Feature extraction;Solid modeling;Streaming media;Training},
+
+  doi={10.1109/ICCV.2015.510}}
+
+@misc{carreira_3dconvnet,
+      title={Quo Vadis, Action Recognition? A New Model and the Kinetics Dataset}, 
+      author={Joao Carreira and Andrew Zisserman},
+      year={2018},
+      eprint={1705.07750},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/1705.07750}, 
+}
+
+@misc{diba_3dconvnet,
+      title={Temporal 3D ConvNets: New Architecture and Transfer Learning for Video Classification}, 
+      author={Ali Diba and Mohsen Fayyaz and Vivek Sharma and Amir Hossein Karami and Mohammad Mahdi Arzani and Rahman Yousefzadeh and Luc Van Gool},
+      year={2017},
+      eprint={1711.08200},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/1711.08200}, 
+}
+
+@misc{gao_lstm_encoder,
+      title={RED: Reinforced Encoder-Decoder Networks for Action Anticipation}, 
+      author={Jiyang Gao and Zhenheng Yang and Ram Nevatia},
+      year={2017},
+      eprint={1707.04818},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/1707.04818}, 
+}
+
+@misc{shou_gan,
+      title={Online Detection of Action Start in Untrimmed, Streaming Videos}, 
+      author={Zheng Shou and Junting Pan and Jonathan Chan and Kazuyuki Miyazawa and Hassan Mansour and Anthony Vetro and Xavier Giro-i-Nieto and Shih-Fu Chang},
+      year={2018},
+      eprint={1802.06822},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/1802.06822}, 
+}
+
+@misc{huang_vivit,
+      title={Towards Training Stronger Video Vision Transformers for EPIC-KITCHENS-100 Action Recognition}, 
+      author={Ziyuan Huang and Zhiwu Qing and Xiang Wang and Yutong Feng and Shiwei Zhang and Jianwen Jiang and Zhurong Xia and Mingqian Tang and Nong Sang and Marcelo H. Ang Jr au2},
+      year={2021},
+      eprint={2106.05058},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2106.05058}, 
+}
+
+@misc{xu_pl_var,
+      title={Cross-Model Pseudo-Labeling for Semi-Supervised Action Recognition}, 
+      author={Yinghao Xu and Fangyun Wei and Xiao Sun and Ceyuan Yang and Yujun Shen and Bo Dai and Bolei Zhou and Stephen Lin},
+      year={2022},
+      eprint={2112.09690},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2112.09690}, 
+}
+
+@INPROCEEDINGS{zenc_enc_dec_ssl,
+  author={Zeng, Ming and Yu, Tong and Wang, Xiao and Nguyen, Le T. and Mengshoel, Ole J. and Lane, Ian},
+  booktitle={2017 IEEE International Conference on Big Data (Big Data)}, 
+  title={Semi-supervised convolutional neural networks for human activity recognition}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={522-529},
+  keywords={Decoding;Semisupervised learning;Noise measurement;Legged locomotion;Activity recognition;Supervised learning;Data models;Human Activity Recognition;Deep Neural Networks;Semi-Supervised Learning;Convolutional Neural Networks},
+  doi={10.1109/BigData.2017.8257967}}
