--- a/main.tex
+++ b/main.tex
@@ -6,8 +6,6 @@
             top=1in,
             bottom=1.2in,
             footskip=.5in]{geometry}
-
-
 \usepackage{lipsum}
 \usepackage[toc,page]{appendix}
 \usepackage{afterpage}
@@ -25,12 +23,12 @@
 \usepackage{siunitx}
 \usepackage{hyperref}
 \sisetup{scientific-notation=true, output-exponent-marker=\ensuremath{\mathrm{E}}}
-
+%
 \newcommand\blankpage{%
     \null
     \thispagestyle{empty}%
     \newpage}
-
+%
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
@@ -38,34 +36,33 @@
 \fancyhead[OR]{\nouppercase\rightmark}
 \fancyhead[ER,OL]{\thepage}
 \setlength{\headheight}{15pt}% ...at least 51.60004pt
-
+%
 \geometry{
     hmargin={1in, 1in},
     vmargin={1.1in, 1.1in}
 } 
 \setlength{\headsep}{0.3in}
 \savegeometry{origin}
-
+%
 \geometry{
     hmargin={2cm, 2cm},
     vmargin={5cm, 2cm}
 } \savegeometry{coverpage}
-
+%
 \usepackage{biblatex}
 \addbibresource{bibliography/bibliography.bib}
-
+%
 \usepackage{amsmath}
-% \usepackage{acronym}
 \usepackage{acro}
 \usepackage{xcolor}
 \usepackage[ruled]{algorithm2e}
-
+%
 % Define a new command let Stefano insert his comments
 \newcommand{\stext}[1]{\color{teal}\rule{\linewidth}{1mm}
 {#1}\\
 \rule{\linewidth}{1mm}
 \color{black}}
-
+%
 % list of acronyms
 \DeclareAcronym{adas}{
     short = ADAS,
@@ -199,21 +196,37 @@
     short = GAN,
     long = Generative Adversarial Network
 }
-
-
+%
+%
 \begin{document}
 \pagenumbering{roman}
 \loadgeometry{coverpage}
-
+%
 % \include{chapters/comments/comments.tex}
-
+%
 \include{chapters/0_cover/cover.tex}
 \loadgeometry{origin}
 \include{chapters/0_acknowls/acknowls.tex}
 \include{chapters/0_abstract/abstract.tex}
 \tableofcontents
+%
 \listoffigures
+\clearpage
+\blankpage
+\thispagestyle{empty}
+%
 \listoftables
+\clearpage
+\blankpage
+\thispagestyle{empty}
+%
+\listofalgorithms
+\clearpage
+\blankpage
+\thispagestyle{empty}
+%
+\clearpage
+\markboth{List of Acronyms}{List of Acronyms}
 \printacronyms
 \include{chapters/1_introduction/introduction.tex}
 %
