Added knolwdge-distillation citation in thesis organization.

--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -768,3 +768,13 @@ isbn="978-3-540-33833-8"
   pages={522-529},
   keywords={Decoding;Semisupervised learning;Noise measurement;Legged locomotion;Activity recognition;Supervised learning;Data models;Human Activity Recognition;Deep Neural Networks;Semi-Supervised Learning;Convolutional Neural Networks},
   doi={10.1109/BigData.2017.8257967}}
+
+@misc{yu_knowledge_distillation,
+      title={Distilling Step-by-Step! Outperforming Larger Language Models with Less Training Data and Smaller Model Sizes}, 
+      author={Cheng-Yu Hsieh and Chun-Liang Li and Chih-Kuan Yeh and Hootan Nakhost and Yasuhisa Fujii and Alexander Ratner and Ranjay Krishna and Chen-Yu Lee and Tomas Pfister},
+      year={2023},
+      eprint={2305.02301},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2305.02301}, 
+}
