--- a/main.tex
+++ b/main.tex
@@ -196,6 +196,10 @@
     short = GAN,
     long = Generative Adversarial Network
 }
+\DeclareAcronym{llms}{
+    short = LLMs,
+    long = Large Language Models
+}
 %
 %
 \begin{document}
