Updated description of experiments on BDD-100k.

--- a/main.tex
+++ b/main.tex
@@ -200,6 +200,10 @@
     short = LLMs,
     long = Large Language Models
 }
+\DeclareAcronym{sl}{
+    short = SL,
+    long = Supervised Learning
+}
 %
 %
 \begin{document}
