--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,24 @@
 \usepackage{multirow}
 \usepackage{siunitx}
 \usepackage{hyperref}
+%
 \usepackage[most]{tcolorbox}
+% Define a new tcolorbox style
+\tcbset{
+  myimagebox/.style={
+    boxsep=0mm, 
+    boxrule=0.5mm, 
+    colframe=black, 
+    top=0pt, 
+    bottom=0pt, 
+    left=0pt, 
+    right=0pt,
+    nobeforeafter,
+    tcbox raise base,
+    enhanced
+  }
+}
+%
 \sisetup{scientific-notation=true, output-exponent-marker=\ensuremath{\mathrm{E}}}
 %
 \newcommand\blankpage{%
