--- a/main.tex
+++ b/main.tex
@@ -124,7 +124,7 @@
 }
 \DeclareAcronym{mpl}{
     short = MPL,
-    long = Meta Pseudo Labels
+    long = Meta Pseudo-Labels
 }
 \DeclareAcronym{vit}{
     short = ViT,
