Updated conclusions for traditional mode.

--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -778,3 +778,13 @@ isbn="978-3-540-33833-8"
       primaryClass={cs.CL},
       url={https://arxiv.org/abs/2305.02301}, 
 }
+
+@misc{yolo,
+      title={You Only Look Once: Unified, Real-Time Object Detection}, 
+      author={Joseph Redmon and Santosh Divvala and Ross Girshick and Ali Farhadi},
+      year={2016},
+      eprint={1506.02640},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/1506.02640}, 
+}
