--- a/main.tex
+++ b/main.tex
@@ -90,9 +90,9 @@
     short = CAGR,
     long = Compound Annual Growth Rate
 }
-\DeclareAcronym{oems}{
-    short = OEMs,
-    long = Original Equipment Manufacturers
+\DeclareAcronym{oem}{
+    short = OEM,
+    long = Original Equipment Manufacturer
 }
 \DeclareAcronym{acc}{
     short = ACC,
@@ -214,9 +214,9 @@
     short = GAN,
     long = Generative Adversarial Network
 }
-\DeclareAcronym{llms}{
-    short = LLMs,
-    long = Large Language Models
+\DeclareAcronym{llm}{
+    short = LLM,
+    long = Large Language Model
 }
 \DeclareAcronym{sl}{
     short = SL,
