Added GitHub repo references.

--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -788,3 +788,11 @@ isbn="978-3-540-33833-8"
       primaryClass={cs.CV},
       url={https://arxiv.org/abs/1506.02640}, 
 }
+
+@misc{github_repo,
+  author       = {Alberto Trabacchin},
+  title        = {VisionADAS},
+  year         = 2024,
+  url          = {https://github.com/alberto-trabacchin/VisionADAS},
+  note         = {GitHub repository},
+}
