Updated image of tesla model 3.

--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -796,3 +796,11 @@ isbn="978-3-540-33833-8"
   url          = {https://github.com/alberto-trabacchin/VisionADAS},
   note         = {GitHub repository},
 }
+
+@misc{mantangcg_2024_tesla_model_3,
+  author = {MantangCG},
+  title = {2024 Tesla Model 3},
+  year = {2024},
+  howpublished = {\url{https://www.renderhub.com/mantangcg/2024-tesla-model-3}},
+  note = {Accessed: 2024-07-11}
+}
