Updated the bibliography, added images to the introduction chapter, and updated the introduction chapter.

--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -801,6 +801,6 @@ isbn="978-3-540-33833-8"
   author = {MantangCG},
   title = {2024 Tesla Model 3},
   year = {2024},
-  howpublished = {\url{https://www.renderhub.com/mantangcg/2024-tesla-model-3}},
+  howpublished = {\url{https://www.renderhub.com/mantangcg/2024-tesla-model-3/2024-tesla-model-3-20.jpg}},
   note = {Accessed: 2024-07-11}
 }
