--- a/main.tex
+++ b/main.tex
@@ -242,6 +242,14 @@
     short = SL,
     long = Supervised Learning
 }
+\DeclareAcronym{fsd}{
+    short = FSD,
+    long = Full Self-Driving
+}
+\DeclareAcronym{npu}{
+    short = NPU,
+    long = Neural Processing Unit
+}
 %
 \setcounter{tocdepth}{4}
 %
