--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -804,3 +804,27 @@ isbn="978-3-540-33833-8"
   howpublished = {\url{https://www.renderhub.com/mantangcg/2024-tesla-model-3/2024-tesla-model-3-20.jpg}},
   note = {Accessed: 2024-07-11}
 }
+
+@misc{wikichip_2024_tesla_fsd_computer_board,
+  author = {WikiChip},
+  title = {2024 Tesla FSD Computer Board},
+  year = {2024},
+  howpublished = {\url{https://en.wikichip.org/w/images/6/6e/tesla_fsd_computer_board.png}},
+  note = {Accessed: 2024-07-11}
+}
+
+@misc{wikichip_2024_tesla_fsd_chip,
+  author = {WikiChip},
+  title = {2024 Tesla FSD Chip},
+  year = {2024},
+  howpublished = {\url{https://en.wikichip.org/w/images/6/6d/tesla_fsd_die_(annotated).png}},
+  note = {Accessed: 2024-07-11}
+}
+
+@misc{wikichip_2024_tesla_fsd_npu,
+  author = {WikiChip},
+  title = {2024 Tesla FSD NPU},
+  year = {2024},
+  howpublished = {\url{https://en.wikichip.org/w/images/8/84/tesla_fsd_die_(npu)_(annotated).png}},
+  note = {Accessed: 2024-07-11}
+}
