--- a/main.tex
+++ b/main.tex
@@ -250,6 +250,10 @@
     short = NPU,
     long = Neural Processing Unit
 }
+\DeclareAcronym{soc}{
+    short = SoC,
+    long = System on Chip
+}
 %
 \setcounter{tocdepth}{4}
 %
