Updated references of picture.

--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -828,3 +828,51 @@ isbn="978-3-540-33833-8"
   howpublished = {\url{https://en.wikichip.org/w/images/8/84/tesla_fsd_die_(npu)_(annotated).png}},
   note = {Accessed: 2024-07-11}
 }
+
+@misc{valeo_2024_ultrasonic_sensor,
+  author = {WikiChip},
+  title = {2024 Tesla FSD NPU},
+  year = {2024},
+  howpublished = {\url{https://www.valeo.com/wp-content/uploads/2023/06/Ultrasonic-USV10-Sensor-2.png}},
+  note = {Accessed: 2024-07-11}
+}
+
+@misc{continental_2024_radar_sensor,
+  author = {WikiChip},
+  title = {2024 Tesla FSD NPU},
+  year = {2024},
+  howpublished = {\url{https://www.continental-automotive.com/en/components/radars.html}},
+  note = {Accessed: 2024-07-11}
+}
+
+@misc{drivetesla_2024_side_repeater_camera,
+  author = {WikiChip},
+  title = {2024 Tesla FSD NPU},
+  year = {2024},
+  howpublished = {\url{https://driveteslacanada.ca/news/future-software-update-will-open-up-use-of-side-repeater-cameras-when-your-tesla-is-in-reverse/}},
+  note = {Accessed: 2024-07-11}
+}
+
+@misc{drivetesla_2024_pillar_camera,
+  author = {WikiChip},
+  title = {2024 Tesla FSD NPU},
+  year = {2024},
+  howpublished = {\url{https://www.whichcar.com.au/car-reviews/tesla-model-3-review}},
+  note = {Accessed: 2024-07-11}
+}
+
+@misc{drivetesla_2024_back_camera,
+  author = {Taimoor Ashraf},
+  title = {Many Benefits of Installing Dash Cams and Rear Cameras in Cars},
+  year = {2022},
+  howpublished = {\url{https://blog.olx.com.pk/autos/many-benefits-of-installing-dash-cams-and-rear-cameras-in-cars/}},
+  note = {Accessed: 2024-07-11}
+}
+
+@misc{drivetesla_2024_front_camera,
+  author = {Taimoor Ashraf},
+  title = {Many Benefits of Installing Dash Cams and Rear Cameras in Cars},
+  year = {2022},
+  howpublished = {\url{https://driveteslacanada.ca/news/lg-and-samsung-competing-for-tesla-camera-orders-report/}},
+  note = {Accessed: 2024-07-11}
+}
