--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -830,32 +830,32 @@ isbn="978-3-540-33833-8"
 }
 
 @misc{valeo_2024_ultrasonic_sensor,
-  author = {WikiChip},
-  title = {2024 Tesla FSD NPU},
+  author = {Valeo},
+  title = {Car Ultrasonic Sensors},
   year = {2024},
-  howpublished = {\url{https://www.valeo.com/wp-content/uploads/2023/06/Ultrasonic-USV10-Sensor-2.png}},
+  howpublished = {\url{https://www.valeo.com/en/catalogue/cda/car-ultrasonic-sensors/}},
   note = {Accessed: 2024-07-11}
 }
 
 @misc{continental_2024_radar_sensor,
-  author = {WikiChip},
-  title = {2024 Tesla FSD NPU},
+  author = {Continental},
+  title = {Advanced Radar Sensor ARS540, Long Range Radar},
   year = {2024},
-  howpublished = {\url{https://www.continental-automotive.com/en/components/radars.html}},
+  howpublished = {\url{https://www.continental-automotive.com/en/components/radars/long-range-radars/advanced-radar-sensor-ars540.html}},
   note = {Accessed: 2024-07-11}
 }
 
 @misc{drivetesla_2024_side_repeater_camera,
-  author = {WikiChip},
-  title = {2024 Tesla FSD NPU},
-  year = {2024},
+  author = {Darryn John},
+  title = {Future software update will open up use of side repeater cameras when your Tesla is in reverse},
+  year = {2020},
   howpublished = {\url{https://driveteslacanada.ca/news/future-software-update-will-open-up-use-of-side-repeater-cameras-when-your-tesla-is-in-reverse/}},
   note = {Accessed: 2024-07-11}
 }
 
 @misc{drivetesla_2024_pillar_camera,
-  author = {WikiChip},
-  title = {2024 Tesla FSD NPU},
+  author = {Jordan Hickey, Henry Man},
+  title = {2024 Tesla Model 3 review: Full range detailed},
   year = {2024},
   howpublished = {\url{https://www.whichcar.com.au/car-reviews/tesla-model-3-review}},
   note = {Accessed: 2024-07-11}
@@ -870,9 +870,65 @@ isbn="978-3-540-33833-8"
 }
 
 @misc{drivetesla_2024_front_camera,
-  author = {Taimoor Ashraf},
-  title = {Many Benefits of Installing Dash Cams and Rear Cameras in Cars},
-  year = {2022},
+  author = {Scott Nordlund},
+  title = {LG and Samsung competing for Tesla camera orders: Report},
+  year = {2024},
   howpublished = {\url{https://driveteslacanada.ca/news/lg-and-samsung-competing-for-tesla-camera-orders-report/}},
   note = {Accessed: 2024-07-11}
+}
+
+@misc{pytorch_alexnet,
+  author = {PyTorch Contributors},
+  title = {AlexNet Model},
+  year = {2024},
+  url = {https://pytorch.org/vision/main/models/generated/torchvision.models.alexnet.html},
+  note = {Accessed: 2024-07-12}
+}
+
+@misc{pytorch_resnet,
+  author = {PyTorch Contributors},
+  title = {ResNet Model},
+  year = {2024},
+  url = {https://pytorch.org/vision/main/models/resnet.html},
+  note = {Accessed: 12-Jul-2024}
+}
+
+@misc{pytorch_inception_v3,
+  author = {PyTorch Contributors},
+  title = {Inception V3 Model},
+  year = {2024},
+  url = {https://pytorch.org/vision/main/models/generated/torchvision.models.inception_v3.html#torchvision.models.inception_v3},
+  note = {Accessed: 12-Jul-2024}
+}
+
+@misc{pytorch_densenet,
+  author = {PyTorch Contributors},
+  title = {DenseNet Model},
+  year = {2024},
+  url = {https://pytorch.org/vision/main/models/densenet.html},
+  note = {Accessed: 12-Jul-2024}
+}
+
+@misc{pytorch_efficientnet,
+  author = {PyTorch Contributors},
+  title = {EfficientNet Model},
+  year = {2024},
+  url = {https://pytorch.org/vision/main/models/efficientnet.html},
+  note = {Accessed: 12-Jul-2024}
+}
+
+@misc{pytorch_vision_transformer,
+  author = {PyTorch Contributors},
+  title = {Vision Transformer Model},
+  year = {2024},
+  url = {https://pytorch.org/vision/main/models/vision_transformer.html},
+  note = {Accessed: 12-Jul-2024}
+}
+
+@misc{pytorch_vgg,
+  author = {PyTorch Contributors},
+  title = {VGG Model},
+  year = {2024},
+  url = {https://pytorch.org/vision/main/models/vgg.html},
+  note = {Accessed: 12-Jul-2024}
 }
