--- a/main.tex
+++ b/main.tex
@@ -70,9 +70,9 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[EL]{\nouppercase\leftmark}
-\fancyhead[OR]{\nouppercase\rightmark}
-\fancyhead[ER,OL]{\thepage}
+\fancyhead[LE,RO]{\thepage} % Left on Even, Right on Odd
+\fancyhead[RE]{\nouppercase\leftmark} % Right on Even
+\fancyhead[LO]{\nouppercase\rightmark} % Left on Odd
 \setlength{\headheight}{15pt}% ...at least 51.60004pt
 %
 \geometry{
